Overview of changes in lightdm 0.0.2

    * Fix installation of D-Bus service file

Overview of changes in lightdm 0.0.1

    * Initial release